--- a/app.json
+++ b/app.json
@@ -1,16 +1,19 @@
 {
   "pages": [
+    
+    "pages/list/list",
     "pages/index/index",
-    "pages/list/list"
-   
+    "pages/detail/detail"
     
   ],
+  "requiredBackgroundModes": ["audio", "location"],
   "window": {
-    "navigationBarBackgroundColor": "#8ed145",
+    "navigationBarBackgroundColor": "#489B81",
     "navigationBarTextStyle": "black",
     "navigationBarTitleText": "welcome to atguigu",
     "backgroundColor": "#eeeeee",
     "backgroundTextStyle": "light",
     "enablePullDownRefresh": false
-  }
+  },
+  "sitemapLocation": "sitemap65.json"
 }
